--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/matisse-ops/backend-chapter-1/issues"
   },
-  "homepage": "https://github.com/matisse-ops/backend-chapter-1#readme"
+  "homepage": "https://github.com/matisse-ops/backend-chapter-1#readme",
+  "dependencies": {
+    "express": "^5.2.1"
+  }
 }
